Fixed a horizontal scrollbar showing for no reason.

--- a/static/bootstrap/css/stylesheet.css
+++ b/static/bootstrap/css/stylesheet.css
@@ -16,3 +16,6 @@ div{
           transition: all 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.50+ */
 }	
 
+body {
+   overflow-x: hidden;
+}
